Fix llm proxy related typos
